# invenio-override

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-extract.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_override/: __init__.py  config.py  ext.py  generators.py  lom.py  permissions.py  search.py  views.py  webpack.py
invenio_override/assets/scss/invenio_override/: footer.scss  header.scss  overrides.scss  theme.scss
invenio_override/assets/scss/invenio_override/search/: theme.scss  variables.scss
invenio_override/assets/scss/invenio_theme_tugraz/: header.scss  overrides.scss  variables.scss
invenio_override/assets/scss/invenio_theme_tugraz/search/: footer.scss
invenio_override/assets/semantic-ui/js/invenio_override/: UploadsResults.js  theme.js  uploads_overrides.js
invenio_override/assets/semantic-ui/less/invenio_override/: accounts.less  communities.less  dashboard.less  deposit.less  footer.less  footer_mug.less  frontpage.less  header.less  login.less  macros.less  overrides.less  record.less  search.less  theme.less  variables.less
invenio_override/assets/semantic-ui/less/invenio_theme_tugraz/: accounts.less  deposit.less  footer.less  frontpage.less  overrides.less
invenio_override/templates/invenio_override/: 423.html  base.html  benefits.html  comingsoon.html  communities_frontpage.html  contact_us.html  footer.html  footer_mug.html  frontpage.html  frontpage_reasons.html  header.html  header_frontpage.html  index.html  navbar.html  overview.html  recent_uploads.html  resource_overview.html  search.html
invenio_override/templates/invenio_override/accounts/: accounts_base.html  header_login.html  header_login_mug.html  login_user.html  register_user.html
invenio_override/templates/invenio_override/macros/: authors.html
invenio_override/templates/invenio_records_marc21/landing_page/: record.html
invenio_override/templates/invenio_theme_tugraz/: footer.html  header.html  index.html  navbar.html
invenio_override/templates/invenio_theme_tugraz/accounts/: accounts_base.html  register_user.html
invenio_override/templates/invenio_theme_tugraz/macros/: authors.html
invenio_override/templates/semantic-ui/invenio_app_rdm/help/: search.de.html  search.en.html
invenio_override/templates/semantic-ui/invenio_app_rdm/records/: deposit.html  detail.html
invenio_override/translations/: messages.pot
invenio_override/translations/de/LC_MESSAGES/: messages.po
invenio_override/translations/en/LC_MESSAGES/: messages.po
tests/: conftest.py  test_invenio_override.py
(+9 files in other folders)
