# -*- coding: utf-8 -*-
#
# Copyright (C) 2024 Shared RDM.
#
# invenio-override is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-override
version = attr: invenio_override.__version__
description = "Invenio module for sharedRDM theme."
long_description = file: README.rst, CHANGES.rst
keywords = invenio sharedRDM
license = MIT
author = "sharedRDM"
author_email = mojib.wali@tugraz.at
url = https://github.com/sharedRDM/invenio-override
platforms = any
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-assets>=2.0.0
    invenio-i18n>=1.3.1
    invenio_config_tugraz>=0.11.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    Sphinx>=4.5.0
    pytest-invenio>=2.1.0,<3.0.0
    invenio-app>=1.3.4,<1.4.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_override = invenio_override:InvenioThemeTugraz
invenio_base.blueprints =
    invenio_override = invenio_override.views:ui_blueprint
invenio_i18n.translations =
    messages = invenio_override
invenio_assets.webpack =
    invenio_theme_tugraz_theme = invenio_override.webpack:theme
invenio_config.module =
    invenio_override = invenio_override.config

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_override/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = sharedRDM
msgid_bugs_address = mojib.wali@tugraz.at
mapping-file = babel.ini
output-file = invenio_override/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_override/translations/messages.pot
output-dir = invenio_override/translations/

[update_catalog]
input-file = invenio_override/translations/messages.pot
output-dir = invenio_override/translations/
[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_override --cov-report=term-missing tests invenio_override
testpaths = tests invenio_override
live_server_scope = module